# python-tcod-ecs

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
scripts/: get_release_description.py
tcod/ecs/: __init__.py  _converter.py  callbacks.py  cattrs.py  constants.py  entity.py  query.py  registry.py  test_ecs.py  typing.py  world.py
tests/: test_benchmarks.py  test_cattrs.py  test_ecs.py  test_relations.py  test_traversal.py
